<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MichalCiolczyk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ShowAlertDialog">Show alert dialog</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="LoginButton">Login</string>
    <string name="title_activity_secure_data">SecureDataActivity</string>
    <string name="much_secure">Much Security! Very secret message!</string>
    <string name="action_logout">Logout</string>
    <string name="OpenOrCreateDatabase">Open or create database</string>
    <string name="InsertData">Insert Data</string>
    <string name="RunSimpleAdapter">Run simple adapter</string>
    <string name="ShowUserList">Show user list</string>

</resources>
