<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pl.edu.agh.michalciolczyk.SecureDataActivity">

    <TextView android:text="@string/much_secure" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OpenOrCreateDatabase"
        android:id="@+id/OpenOrCreateDatabase"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onOpenOrCreateDatabaseClicked" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InsertData"
        android:id="@+id/InsertData"
        android:onClick="onInsertDataClicked"
        android:layout_above="@+id/OpenOrCreateDatabase"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RunSimpleAdapter"
        android:id="@+id/RunSimpleAdapter"
        android:layout_above="@+id/InsertData"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onRunSimpleAdapterClicked" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowUserList"
        android:id="@+id/ShowUserList"
        android:layout_above="@+id/RunSimpleAdapter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onShowUserListClicked" />

</RelativeLayout>
